--- a/www/clonos/files/pkg-message.in
+++ b/www/clonos/files/pkg-message.in
@@ -1,134 +1,180 @@
-Post Installation:
+ClonOS post installation setup:
 
-* Check for RACCT is enabled on the host, please add :
+[*] Check for RACCT is enabled on the host, please add:
 
-  kern.racct.enable="1"
+kern.racct.enable="1"
 
-  into /boot/loader.conf and reboot host
+    into /boot/loader.conf and reboot host
 
-* Init CBSD workdir
+[*] Init CBSD workdir
 
-  See https://www.bsdstore.ru/en/installing_cbsd.html#initenv for details
+    See https://www.bsdstore.ru/en/installing_cbsd.html#initenv for details
 
-* Ensure CBSD is started:
+[*] Ensure CBSD is started:
 
-  sysrc cbsdd_enable=YES
-  service cbsdd status || service cbsdd start
+sysrc cbsdd_enable=YES
+service cbsdd status || service cbsdd start
 
-* active/init settings in ~cbsd/etc/vm_vncwss.conf:
+[*] Configure and run beanstalkd:
 
-  daemon_user="www"
-  supervisor_command="/usr/local/bin/bash %%WWWDIR%%/public/novnc/utils/launch.sh"
-  supervisor_directory="%%WWWDIR%%/public/novnc"
+sysrc beanstalkd_flags="-l 127.0.0.1 -p 11300"
+sysrc beanstalkd_enable=YES
+service beanstalkd restart
 
-* Change in /usr/local/etc/php-fpm.conf events mechanism to BSD-specific.
-  To do this, uncomment and edit the events.mechanism parameter to:
-  vi /usr/local/etc/php-fpm.conf:
+[*] Active/init settings in ~cbsd/etc/vm_vncwss.conf:
 
-    ..
-    events.mechanism = kqueue
-    ..
+daemon_user="www"
+supervisor_command="%%PREFIX%%/bin/bash %%WWWDIR%%/public/novnc/utils/launch.sh"
+supervisor_directory="%%WWWDIR%%/public/novnc"
 
-  Or copy: cp %%PREFIX%%/etc/www-php-fpm.conf.clonos.sample %%PREFIX%%/etc/php-fpm.conf
+[*] Change in %%PREFIX%%/etc/php-fpm.conf events mechanism to BSD-specific.
+    To do this, uncomment and edit the events.mechanism parameter to:
+    vi %%PREFIX%%/etc/php-fpm.conf:
 
-* Uncomment and change in /usr/local/etc/php-fpm.d/www.conf port to Unix socket and
-  set's correct access permission:
+..
+events.mechanism = kqueue
+..
 
-    ..
-    listen = /tmp/php-fpm.sock
-    ..
-    listen.backlog = -1
-    ..
-    listen.owner = www
-    listen.group = www
-    listen.mode = 0660
-    ..
+    Or copy: cp %%PREFIX%%/etc/php-fpm.conf.clonos.sample %%PREFIX%%/etc/php-fpm.conf
 
-  Or copy: cp %%PREFIX%%/etc/www-php-fpm.conf.clonos.sample %%PREFIX%%/etc/php-fpm.d/www.conf
+[*] Uncomment and change in %%PREFIX%%/etc/php-fpm.d/www.conf port to Unix socket and
+    set's correct access permission:
 
-* Add "www" user to "cbsd" group: 
+..
+listen = /tmp/php-fpm.sock
+..
+listen.backlog = -1
+..
+listen.owner = www
+listen.group = www
+listen.mode = 0660
+..
 
-    pw groupmod cbsd -M www
+    Or copy: cp %%PREFIX%%/etc/php-fpm.d/www-php-fpm.conf.clonos.sample %%PREFIX%%/etc/php-fpm.d/www.conf
 
-* To execute CBSD commands, let the www user run CBSD through sudo:
-  edit /usr/local/etc/sudoers.d/10_www:
+[*] Add "www" user to "cbsd" group:
 
-    Defaults     env_keep += "workdir DIALOG NOCOLOR"
-    Cmnd_Alias   WEB_CMD = /usr/local/bin/cbsd
-    www   ALL=(ALL) NOPASSWD: WEB_CMD
+pw groupmod cbsd -M www
 
-  And make sure the file permissions are safe:
+[*] To execute CBSD commands, let the www user run CBSD through sudo. Please make
+    sure you have %%PREFIX%%/etc/sudoers.d/10_www with follow content:
 
-    chown root:wheel /usr/local/etc/sudoers.d/10_www
-    chmod 0440 /usr/local/etc/sudoers.d/10_www
+Defaults     env_keep += "workdir DIALOG NOCOLOR"
+Cmnd_Alias   WEB_CMD = %%PREFIX%%/bin/cbsd
+www   ALL=(ALL) NOPASSWD: WEB_CMD
 
-  Or copy: cp %%PREFIX%%/etc/sudoers_10_www.clonos.sample %%PREFIX%%/etc/sudoers.d/10_www
+    And make sure the file permissions are safe:
 
-* Copy supervisord config file
+chown root:wheel %%PREFIX%%/etc/sudoers.d/10_www
+chmod 0440 %%PREFIX%%/etc/sudoers.d/10_www
 
-  Or copy: cp %%PREFIX%%/etc/supervisord.conf.clonos.sample %%PREFIX%%/etc/supervisord.conf
+[*] Change %%PREFIX%%/etc/supervisord.conf to:
 
-* Copy php.ini file
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0777
+chown=nobody:nobody
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+[supervisord]
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisor/supervisord.pid
+nodaemon=false
+minfds=1024
+minprocs=200
+umask=022
+strip_ansi=false
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+[include]
+files=%%PREFIX%%/etc/supervisor.d/*.conf
 
-  Or copy: cp %%PREFIX%%/etc/php.ini.clonos.sample %%PREFIX%%/etc/php.ini
+    Or copy: cp %%PREFIX%%/etc/supervisord.conf.clonos.sample %%PREFIX%%/etc/supervisord.conf
 
-* Configure NGINX: copy or merge sample from
-  %%PREFIX%%/etc/nginx/nginx.conf.clonos.sample
-  into /usr/local/etc/nginx/nginx.conf, e.g:
+[*] Make sure %%PREFIX%%/etc/supervisor.d/program_wsclonos.conf have correct
+    path to CBSD workdir. Please check that line "environment=PATH.." in
+    %%PREFIX%%/etc/supervisor.d/program_wsclonos.conf pointed to ~cbsd path
+    in 'cbsd_workdir':
 
-  cp %%PREFIX%%/etc/nginx/nginx.conf.clonos.sample %%PREFIX%%/etc/nginx/nginx.conf
+    environment=PATH=[.skipp..],cbsd_workdir="/usr/jails"
+                                              ^^^^^^^^^^
+[*] Change %%PREFIX%%/etc/php.ini params:
 
-* Enable nginx, php-fpm and supervisord to run at system startup:
+..
+memory_limit = 256M
+..
+upload_tmp_dir = /tmp
+..
+opcache.enable=1
 
-   sysrc nginx_enable="YES"
-   sysrc php_fpm_enable="YES"
-   sysrc supervisord_enable="YES"
+    Or copy: cp %%PREFIX%%/etc/php.ini.clonos.sample %%PREFIX%%/etc/php.ini
 
-* Start nginx, php-fpm and supervisord to run at system startup:
+[*] Configure NGINX. Make sure/merge this settings into
+    %%PREFIX%%/etc/nginx/nginx.conf:
 
-   service nginx restart
-   service php-fpm restart
-   service supervisord restart
+user www;
+load_module %%PREFIX%%/libexec/nginx/ngx_stream_module.so;
+events {
+        use kqueue;
+}
+http {
+        include       %%PREFIX%%/etc/nginx/mime.types;
+        default_type  application/octet-stream;
+        client_max_body_size    1m;
+        include %%PREFIX%%/etc/nginx/sites-enabled/*.conf;
+}
+stream {
+        include %%PREFIX%%/etc/nginx/conf.stream.d/*.conf;
+        include %%PREFIX%%/etc/nginx/streams-enabled/*;
+}
 
-* Configure CBSD:
+    Or copy: cp %%PREFIX%%/etc/nginx/nginx.conf.clonos.sample %%PREFIX%%/etc/nginx/nginx.conf
+
+[*] Enable nginx, php-fpm and supervisord to run at system startup:
+
+sysrc nginx_enable="YES"
+sysrc php_fpm_enable="YES"
+sysrc supervisord_enable="YES"
+
+[*] Start nginx, php-fpm and supervisord to run at system startup:
+
+service nginx restart
+service php-fpm restart
+service supervisord restart
+
+[*] Configure CBSD:
 
   1)
      ~cbsd/etc/modules.conf must have:
 
-    pkg.d
-    bsdconf.d
-    zfsinstall.d
-    puppet.d
-    convectix.d
-    cbsd_queue.d
+pkg.d
+bsdconf.d
+zfsinstall.d
+puppet.d
+convectix.d
+cbsd_queue.d
+
+    Or copy: cp %%PREFIX%%/etc/cbsd-modules.conf.clonos.sample ~cbsd/etc/modules.conf
 
   2) Re-run CBSD initenv to init modules:
 
-    cbsd initenv
+cbsd initenv
 
   3) Init web user database:
 
-    sh /usr/local/cbsd/modules/forms.d/clonos_database/initforms.sh
+sh %%PREFIX%%/cbsd/modules/forms.d/clonos_database/initforms.sh
 
   4) Configure and run CBSD RACCT stats daemon:
 
-    sysrc cbsd_statsd_hoster_enable=YES
-    sysrc cbsd_statsd_jail_enable=YES
-    sysrc cbsd_statsd_bhyve_enable=YES
-    service cbsd-statsd-hoster restart
-    service cbsd-statsd-jail restart
-    service cbsd-statsd-bhyve restart
+sysrc cbsd_statsd_hoster_enable=YES
+sysrc cbsd_statsd_jail_enable=YES
+sysrc cbsd_statsd_bhyve_enable=YES
+service cbsd-statsd-hoster restart
+service cbsd-statsd-jail restart
+service cbsd-statsd-bhyve restart
 
-* Configure and run beanstalkd:
-
-  1)
-     sysrc beanstalkd_flags="-l 127.0.0.1 -p 11300"
-     sysrc beanstalkd_enable=YES
-     service beanstalkd restart
-
-* Open the main ClonOS directory in your web browser.
+[*] Open the main ClonOS directory in your web browser.
 
   Default login: 'admin', default password: 'admin'
 
-
-* Enjoy the ClonOS !
+[*] Enjoy the ClonOS !
