get rid of supervisord

--- a/www/clonos/Makefile
+++ b/www/clonos/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	clonos
 PORTVERSION=	21.10
 CATEGORIES=	www
+GTAG=		35782af
 DISTNAME=	control-pane-${GTAG}
 
 MAINTAINER=	olevole@olevole.ru
