--- a/www/clonos/files/clonos-node-ws.in
+++ b/www/clonos/files/clonos-node-ws.in
@@ -47,7 +47,7 @@ logdir="/var/log/${name}"
 logfile="${logdir}/${name}.log"
 command="/usr/sbin/daemon"
 procname="%%PREFIX%%/bin/node"
-command_args="-r -P ${daemon_pidfile} -p ${pidfile} -o ${logfile} -S -l ${clonos_node_ws_facility} -s ${clonos_node_ws_priority} -T ${name} ${procname} %%PREFIX%%/www/clonos/node/wsClonos.js"
+command_args="-R5 -P ${daemon_pidfile} -p ${pidfile} -o ${logfile} -S -l ${clonos_node_ws_facility} -s ${clonos_node_ws_priority} -T ${name} ${procname} %%PREFIX%%/www/clonos/node/wsClonos.js"
 start_precmd="clonos_node_ws_precmd"
 stop_cmd=${name}_stop
 status_cmd="${name}_status"
